files-swift/logs/Mistake-10.txt
1.swift:315:10: error: invalid redeclaration of 'showSuccessAlert(message:)'
    func showSuccessAlert(message: String) {
         ^
5.swift:59:10: note: 'showSuccessAlert(message:)' previously declared here
    func showSuccessAlert(message: String) {
         ^
